--- a/public/css/staffprofile.css
+++ b/public/css/staffprofile.css
@@ -1,3 +1,31 @@
-.profile{
-    margin-left: 200px;
+.profile {
+    margin-top: 10px;
+    margin-bottom: -120px;
+    margin-left: 50px;
+}
+
+.all {
+    margin-left: 50px;
+    padding: 20px;
+}
+
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    
+    cursor: pointer;
+    margin-left: 70px;
+    margin-right: -10px;
+    margin-top: 5px;
+    border-radius: 5px;
+}
+
+.button3 {
+    background-color: red;
 }
